--- a/Blazor_StateManagement/appsettings.json
+++ b/Blazor_StateManagement/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-TTLN1EM6; Database=BlazorStateDb; Trusted_Connection=True; MultipleActiveResultSets=True;"
+  }
 }
+
+ //Scaffold-DbContext "Server=LAPTOP-TTLN1EM6; Database=BlazorStateDb; Trusted_Connection=True; MultipleActiveResultSets=True;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Context BlazorStateDbContext 
